--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav class="navbar navbar-expand-md  sticky  fixed-top r-nav">
     <div class="container">
 
-      <a class="navbar-brand animated fadeInLeft" href="#">Abhishek Ray</a>
+      <a class="navbar-brand animated fadeInLeft" href="#">Abhishekk Ray</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarId" >
         <span><i class="fas fa-bars hamburger"></i></span>
       </button>
