--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav class="navbar navbar-expand-md  sticky  fixed-top r-nav">
     <div class="container">
 
-      <a class="navbar-brand animated fadeInLeft" href="#">Abhishekk Ray</a>
+      <a class="navbar-brand animated fadeInLeft" href="#">Abhishek Ray</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarId" >
         <span><i class="fas fa-bars hamburger"></i></span>
       </button>
@@ -81,7 +81,7 @@
         </div>
         <div class="col-lg-6 way-fade-up mt-5 mt-lg-0">
           <h2 class="">About Me</h2>
-          <h4 class="">Hello! <span style="color:#E96F85;">I'M Abhishek Ray</span></h4>
+          <h4 class="">Hello! <span style="color:#E96F85;">I'M Abhishekkk Ray</span></h4>
 
           <p>"Hello! I'm a passionate designer and web developer dedicated to crafting elegant solutions that 
             marry functionality with aesthetics. With a keen eye for design and a deep understanding of coding, 
