--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 way-fade-up">
-          <img src="images/profile.jpg" class="img-fluid img-thumbnail" alt="Profile Picture">
+          <img src="images/piccc.png" class="img-fluid img-thumbnail" alt="Profile Picture">
         </div>
         <div class="col-lg-6 way-fade-up mt-5 mt-lg-0">
           <h2 class="">About Me</h2>
-          <h4 class="">Hello! <span style="color:#E96F85;">I'M Abhishekkk Ray</span></h4>
+          <h4 class="">Hello! <span style="color:#E96F85;">I'M Abhishek Ray</span></h4>
 
           <p>"Hello! I'm a passionate designer and web developer dedicated to crafting elegant solutions that 
             marry functionality with aesthetics. With a keen eye for design and a deep understanding of coding, 
